# bevy_pong

./: Cargo.toml  README.md
.cargo/: config.toml
scripts/: build-release.sh  run.sh
src/: component.rs  game.rs  gamepad.rs  main.rs  settings.rs  ui.rs
src/game/: arena.rs  event.rs  physics.rs  player.rs  resource.rs  state.rs  system.rs
src/ui/: component.rs  in_game.rs  main_menu.rs  pause_menu.rs
