[package]
name = "bevy_pong"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["devtools"]
devtools = [
	"avian2d/debug-plugin",
	"bevy/sysinfo_plugin",
	"bevy/bevy_dev_tools",
	"bevy/bevy_remote",
]

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_gilrs",
	"bevy_render",
	"bevy_sprite",
	"bevy_state",
	"bevy_text",
	"bevy_ui",
	"bevy_window",
	"default_font",
	"multi_threaded",
	"wayland",
	"x11",
	"accesskit_unix",
]

[dependencies]
avian2d = { version = "0.2", default-features = false, features = [
	"2d",
	"f32",
	"simd",
	"default-collider",
	"parry-f32",
] }
rand = { version = "0.8.5" }
