[package]
name = "bevy_pong"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"

[features]
default = ["devtools"]
devtools = ["bevy/sysinfo_plugin", "bevy/bevy_dev_tools", "bevy/bevy_remote"]

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
	"bevy_color",
	"bevy_core_pipeline",
	"bevy_gilrs",
	"bevy_render",
	"bevy_state",
	"bevy_text",
	"bevy_ui",
	"bevy_window",
	"default_font",
	"multi_threaded",
	"wayland",
	"x11",
	"accesskit_unix",
]

[dependencies]
rand = { version = "0.8.5" }
